<resources>
    <string name="app_name">Beanalyze</string>
    <string name="title_home">Homepage</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lsPenyakit">List Penyakit</string>
    <string name="disease_list">Disease List</string>
    <string name="analysis_history">Analysis History</string>
    <string name="title_activity_galery">GaleryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="photoTxt">Take picture</string>
    <string name="analysis_picture">Analysis picture</string>
    <string name="choose_picture">Choose picture</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="image_galery">Image Galery</string>
    <string name="choose_picture_title">Choose picture</string>
    <string name="disease_information">Disease Information</string>
    <string name="imagedisease">ImageDisease</string>
    <string name="disease_name">Disease name :</string>
    <string name="impact">Impact :</string>
    <string name="cause">Cause :</string>
    <string name="identification">Identification :</string>
    <string name="how_to_treat_the_disease">How to treat the disease :</string>
    <string name="login">LOGIN</string>
    <string name="login_txt">Please log in first to get started !</string>
    <string name="username">USERNAME</string>
    <string name="username_login">Username</string>
    <string name="password">PASSWORD</string>
    <string name="password_login">password123</string>
    <string name="show_pass">Toggle Password Visibility</string>
    <string name="login_btn">Login</string>
    <string name="register_direct">Don\'t have any account? click here</string>
    <string name="my_profile">My Profile</string>
    <string name="username_profile">Username :</string>
    <string name="email_profile">Email :</string>
    <string name="name_profile">Name :</string>
    <string name="city_profile">City :</string>
    <string name="register">REGISTER</string>
    <string name="register_txt">Please register first to create your account</string>
    <string name="email_txt">Input your email</string>
    <string name="username_txt">Input your username</string>
    <string name="name_txt">Input your name</string>
    <string name="password_profile">Password :</string>
    <string name="password_txt">input your password</string>
    <string name="city_txt">Input your city</string>
    <string name="register_btn">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="result">Result</string>
    <string name="confidence">Confidence :</string>
    <string name="disease">Disease</string>
    <string name="disease_txt">Here is a list of diseases on bean leaves</string>
    <string name="homepage">Homepage</string>
    <string name="main_feature">Main Feature</string>
    <string name="mainfeature_txt">Here are the main features of this application</string>
    <string name="take_picture">take picture</string>
    <string name="take_picture_txt">Take picture</string>
    <string name="choose_picutre">choose picutre</string>
    <string name="choose_picture_txt">Choose Picture</string>
    <string name="profile">profile</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="disease_image">Disease Image</string>
</resources>